--- a/index.html
+++ b/index.html
@@ -57,34 +57,18 @@
     </div>
     <div class="row">
         <div class="col">
-            <!-- Begin MailChimp Signup Form -->
-            <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-            <style type="text/css">
-                #mc_embed_signup {
-                    background: #fff;
-                    clear: left;
-                    font: 14px Helvetica, Arial, sans-serif;
-                }
-
-                /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-            </style>
-            <div id="mc_embed_signup">
-                <form action="https://poolarent.us18.list-manage.com/subscribe/post?u=bcf201a51ef9e9c0dc948955f&amp;id=c7e58061b6" method="post"
-                    id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <div id="mc_embed_signup_scroll">
-                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                            <input type="text" name="b_bcf201a51ef9e9c0dc948955f_c7e58061b6" tabindex="-1" value="">
-                        </div>
-                        <div class="clear">
-                            <input class="btn btn-primary btn-lg" type="submit" value="Rent your Pool Today!" name="subscribe" id="mc-embedded-subscribe" class="button">
-                        </div>
+            <form action="https://poolarent.us18.list-manage.com/subscribe/post?u=bcf201a51ef9e9c0dc948955f&amp;id=c7e58061b6" method="post"
+                id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                        <input type="text" name="b_bcf201a51ef9e9c0dc948955f_c7e58061b6" tabindex="-1" value="">
                     </div>
-                </form>
-            </div>
-
-            <!--End mc_embed_signup-->
+                    <div class="clear">
+                        <input class="btn btn-primary btn-lg" type="submit" value="Rent your Pool Today!" name="subscribe" id="mc-embedded-subscribe">
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
     <!-- Optional JavaScript -->
